...
                    android:text="Tutor Requests"
                    android:checked="true"
                    app:chipBackgroundColor="@color/white"
                    android:textColor="@color/primary_background"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipReports"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reports"
                    app:chipBackgroundColor="@color/white"
                    android:textColor="@color/primary_background"/>
...
