...
                    app:chipSpacingVertical="8dp">
                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_report_tutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginBottom="8dp"
                android:text="Report Tutor"
                android:textColor="#FF5252"
...
